force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Approval_Committee__c.field-meta.xml
<CustomField>
    <fullName>cm_Approval_Committee__c</fullName>
    <label>Approval Committee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Committee</fullName>
            </value>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>