force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Collateral_Analysis_Collateral_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>cm_Collateral_Analysis_Collateral_Mgmt__c</fullName>
    <description>Used to capture the collateral analysis for product package credit memo. Added for the Commercial Accelerate project.</description>
    <label>Collateral Analysis (Collateral Mgmt)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>