force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Covenant_Analysis__c.field-meta.xml
<CustomField>
    <fullName>cm_Covenant_Analysis__c</fullName>
    <description>Used to capture the covenant narrative information for product package credit memo. Added for the Commercial Accelerate project.</description>
    <label>Covenant Analysis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>