force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Deal_Summary_Loan__c.field-meta.xml
<CustomField>
    <fullName>cm_Deal_Summary_Loan__c</fullName>
    <description>Used to capture the deal summary for product package credit memo. Added for the Commercial Accelerate project.</description>
    <label>Deal Summary (Loan)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>