force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Loan_Committee__c.field-meta.xml
<CustomField>
    <fullName>cm_Loan_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Product Package Approval Process to indicate package should route to a loan committee for approval. Added for the Commercial Accelerate project.</description>
    <label>Loan Committee</label>
    <type>Checkbox</type>
</CustomField>