force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Relationship_Product_Request_Overview__c.field-meta.xml
<CustomField>
    <fullName>cm_Relationship_Product_Request_Overview__c</fullName>
    <description>Used to capture the relationship and product request overview information for product package credit memo. Added for the Commercial Accelerate project.</description>
    <label>Relationship &amp; Product Request Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>