force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Risk_Analysis_Loan__c.field-meta.xml
<CustomField>
    <fullName>cm_Risk_Analysis_Loan__c</fullName>
    <description>Used to capture the risk analysis for product package credit memo. Added for the Commercial Accelerate project.</description>
    <label>Risk Analysis (Loan)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>