force-app/main/default/objects/LLC_BI__Product_Package__c/fields/cm_Send_to_Level_1__c.field-meta.xml
<CustomField>
    <fullName>cm_Send_to_Level_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Product Package approval process. Added for Commercial Accelerate project.</description>
    <label>Send to Level 1</label>
    <type>Checkbox</type>
</CustomField>