force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Additional_Income_Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Additional_Income_Category__c</fullName>
    <description>Users populate this picklist field with any additional income in the deal an FI originates outside of nCino. By default, it is blank.</description>
    <inlineHelpText>Populate this field with any additional income.</inlineHelpText>
    <label>Additional Income Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Swap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>