force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Ancillary_Product_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ancillary_Product_Tax_Rate__c</fullName>
    <description>The approximate tax rate to apply to the revenue of new deposits in the deal an FI originates outside of nCino. By default, it is 21.</description>
    <inlineHelpText>The approximate tax rate to apply to the revenue of new deposits in the deal an FI originates outside of nCino.</inlineHelpText>
    <label>Deposit Tax Rate</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>