force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Ancillary_Revenue_Comments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ancillary_Revenue_Comments__c</fullName>
    <description>Users populate this text field with any details associated with ancillary revenue summarized in the deal. By default, it is blank.</description>
    <inlineHelpText>Use this field for any details associated with the ancillary revenue being summarized in the deal but originated outside of nCino.</inlineHelpText>
    <label>Ancillary Revenue Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>