force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Capital_Allocation_Rate_of_New_Exposures__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Capital_Allocation_Rate_of_New_Exposures__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>Users populate this field with the approximate capital allocation rate for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same capital allocation rate used in loans. By default, it is 5%.</description>
    <inlineHelpText>The approximate capital allocation rate for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same capital allocation rate used in loans.</inlineHelpText>
    <label>Capital Allocation Rate of New Exposures</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>