force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Cost_of_Capital_of_New_Exposures__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_of_Capital_of_New_Exposures__c</fullName>
    <defaultValue>0.10</defaultValue>
    <description>Users populate this field with the approximate cost of capital for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same cost of capital rate used in for loans. By default, it is 10%.</description>
    <inlineHelpText>The approximate cost of capital percentage for all new treasury exposure being originated in the deal outside of nCino. nCino recommends using the same cost of capital rate used in for loans.</inlineHelpText>
    <label>Cost of Capital of New Exposures</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>