force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Cost_Of_New_Deposit_Capital_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_Of_New_Deposit_Capital_Percent__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>Use this field to represent the cost of deposit capital for new deposits in the deal an FI originates outside of nCino. By default, it is 10.</description>
    <inlineHelpText>The cost of deposit capital for new deposits in the deal an FI originates outside of nCino.</inlineHelpText>
    <label>Cost of New Deposit Capital</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>