force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deal_Type__c</fullName>
    <description>Users select a deal type from this optional picklist. This determines behaviours and layouts for the record. By default it is blank.</description>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Onboarding</fullName>
            </value>
            <value>
                <fullName>Handover Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>