force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Deposit_Reserve_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Reserve_Rate__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>Use this field to determine the approximate reserve rate for new deposit balances in the deal an FI holds on the balance sheet. By default, it is 5.</description>
    <inlineHelpText>The approximate reserve rate for deposit balances to be held on the balance sheet.</inlineHelpText>
    <label>Deposit Reserve Rate</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>