force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Expected_Utilization_of_New_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expected_Utilization_of_New_Exposure__c</fullName>
    <defaultValue>0.30</defaultValue>
    <description>Users populate this optional field with the expected utilization percentage of new credit exposure for applicable treasury service products an FI originates outside of nCino. By default, it is  30%.</description>
    <inlineHelpText>Users populate this field with the expected utilization % of new credit exposure for applicable treasury service products an FI originates outside of nCino.</inlineHelpText>
    <label>Expected Utilization of New Exposure</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>