force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Handover_Information__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Handover_Information__c</fullName>
    <description>Users populate this optional rich text field with context and other supporting information about the client and their financial situation. By default it is blank.</description>
    <inlineHelpText>Provide context and other supporting information about the client and their financial situation.</inlineHelpText>
    <label>Handover Information</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>