force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Handover_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Handover_Type__c</fullName>
    <description>Users select the type of a Handover Loan from this optional picklist. By default it is blank.</description>
    <label>Handover Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distressed Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>