force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Last_Exposure_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Last_Exposure_Calc_Date__c</fullName>
    <description>This date/time field automatically populates via the system. This field specifies the most recent date and time for a given exposure calculation. Default is null.</description>
    <label>Last Exposure Calculation Date</label>
    <type>DateTime</type>
</CustomField>