force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__New_Deposit_Blended_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Deposit_Blended_Rate__c</fullName>
    <description>The system populates this field to determine the approximate blended rate of new interest-bearing products an FI originates in the deal outside of nCino. By default, it is blank.</description>
    <inlineHelpText>Use this field to determine the approximate blended rate of new interest-bearing products an FI originates in the deal outside of nCino.</inlineHelpText>
    <label>New Deposit Product Rate</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>