force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__New_Deposit_Revenue_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Deposit_Revenue_Rate__c</fullName>
    <defaultValue>0.02</defaultValue>
    <description>Use this field to determine the approximate deposit revenue rate for new deposit balances in the deal an FI originates outside of nCino. This value reflects a FTP or cost of funds that is confirmed with the FI. By default, it is 2.</description>
    <inlineHelpText>The approximate reserve rate for deposit balances to be held on the balance sheet. This value reflects a FTP or cost of funds that is confirmed with the FI.</inlineHelpText>
    <label>New Deposit Revenue Rate</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>