force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__New_Interest_Bearing_Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Interest_Bearing_Deposit_Balance__c</fullName>
    <description>Users populate this field with the sum of any additional interest-bearing deposit account balances for all new deposit products an FI originates in the deal outside of nCino. By default, it is blank.</description>
    <inlineHelpText>Use this field to indicate any additional interest-bearing deposit account balance for all new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
    <label>New Interest Bearing Deposit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>