force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__New_Money__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Money__c</fullName>
    <description>This field is an optional currency field.  This is a manually entered field that is used to track the amount of new money being introduced to the Product Package.</description>
    <label>New Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>