force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__New_Monthly_Treasury_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Monthly_Treasury_Income__c</fullName>
    <description>Users populate this optional field to indicate the new monthly income of all treasury products an FI originates outside of nCino net of any ECR allowance. By default, it is blank.</description>
    <inlineHelpText>The additional monthly income of all treasury products (net of ECR) in the deal that an FI originates outside of nCino.</inlineHelpText>
    <label>New Monthly Treasury Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>