force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__New_Treasury_Credit_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Treasury_Credit_Exposure__c</fullName>
    <description>Users populate this optional field with the sum of any new credit exposure for applicable treasury service products an FI originates outside of nCino. By default, it is blank.</description>
    <inlineHelpText>This field indicates the sum of total credit exposure for any new treasury service products in the deal an FI originates outside of nCino.</inlineHelpText>
    <label>New Treasury Credit Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>