force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__New_Treasury_One_Time_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Treasury_One_Time_Fee_Amount__c</fullName>
    <description>Users populate this optional field with the sum of any one-time fee amounts for treasury products being originated outside of nCino. By default, it is blank.</description>
    <inlineHelpText>Populate this field with the sum of any one-time fees associated with treasury products an FI originates in the deal outside of nCino. Exclusive of recurring fees captured in New Monthly Treasury Income.</inlineHelpText>
    <label>New Treasury One Time Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>