force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Primary_Entity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Primary_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Users populate this optional lookup field to indicate the primary borrower of loans. When populated, the system uses this field to create a specific entity involvement record when users create a loan in Deal Proposal.</description>
    <label>Primary Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Primary Product Packages</relationshipLabel>
    <relationshipName>Primary_Product_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>