force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Primary_Officer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Primary_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is an optional and manually set field. This field is a lookup to nCino users, and specifies which user is the primary officer for the Product Package</description>
    <label>Primary Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>